# embassy-nrf-esb

./: .neoconf.json  Cargo.toml  README.md  sequence.puml
src/: addresses.rs  config.rs  lib.rs  log.rs  pid.rs  prx.rs  ptx.rs  radio.rs
src/radio/: mod.rs  packet.rs  pid.rs  recv.rs  send.rs
