[package]
name = "embassy-nrf-esb"
version = "0.1.0"
edition = "2024"

[dependencies]
bbq2 = { git = "https://github.com/jamesmunns/bbq2", default-features = false, features = [
  "cas-atomics",
  "maitake-sync-0_1",
] }
embassy-hal-internal = "0.2.0"
embassy-nrf = { version = "0.3.1", features = ["unstable-pac"] }
embassy-sync = "0.6.2"
embassy-futures = "0.1.1"
embassy-time = "0.4.0"
zerocopy = { version = "0.8.20", features = ["derive"] }
defmt = { version = "0.3.10", optional = true }
nrf-pac = "0.1.0"

[features]
_check = ["embassy-nrf/nrf52840", "fast-ru", "defmt"]

fast-ru = []
defmt = ["dep:defmt", "nrf-pac/defmt", "embassy-nrf/defmt"]
